[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Scripts/LevelParts.gd" type="Script" id=1]

[node name="LevelParts" type="Node2D" groups=["LevelParts"]]
script = ExtResource( 1 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Deathzones" type="Node2D" parent="."]

[node name="LevelTransitionZones" type="Node2D" parent="."]

[node name="EntryPoints" type="Node2D" parent="."]

[node name="BreakableWalls" type="Node2D" parent="."]
